update contact section

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
+	<link type="text/css" rel="stylesheet" href="css/contact.css">
     <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.onepage-scroll.min.js"></script>
@@ -17,8 +18,16 @@
         <section class="page2">
             <h1>hello</h1>
         </section>
-        <section class="page3">
-            <h1>hello</h1>
+        <section id="contactPage">
+            <img src="img/contactLogo.png" id="contactLogo" />
+            <div class="contactInfo">
+            	<div class="contactInfoList">
+	           		<p>Tel: 12331231312</p>
+	           		<p>Email: abc@def.com</p>
+	           		<p>Addr: 光电楼333</p>
+           		</div>
+            </div>
+            <img src="img/contactArrow.png" id="contactArrow" />
         </section>
     </div>
 
