--- a/app/index.html
+++ b/app/index.html
@@ -6,22 +6,22 @@
     <link type="text/css" rel="stylesheet" href="css/works.css">
 	<link type="text/css" rel="stylesheet" href="css/contact.css">
     <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.onepage-scroll.min.js"></script>
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<title>Hello</title>
 </head>
 <body>
     <div class="main">
-        <section class="page1">
+        <section class="page page1">
             <h1>hello</h1>
+            <img src="img/logo.png" class="logo" />
         </section>
-        <section class="page2">
+        <section class="page page2">
             <h1>hello</h1>
+            <img src="img/logo.png" class="logo" />
         </section>
 
         <!-- works page start -->
-        <section id="worksPage">
+        <section class="page worksPage">
             <img src="img/worksLogo.png" id="worksLogo" />
             <div class="worksMain">
                 <div class="worksItem">
@@ -59,11 +59,12 @@
                 </div>
             </div>
             <!-- works main end -->
+            <img src="img/logo.png" class="logo" />
         </section>
         <!-- works page end -->
 
         <!-- contact page start -->
-        <section id="contactPage">
+        <section class="page contactPage">
             <img src="img/contactLogo.png" id="contactLogo" />
             <div class="contactInfo">
             	<div class="contactInfoList">
@@ -72,23 +73,30 @@
 	           		<p>Addr: 光电楼333</p>
            		</div>
             </div>
-            <img src="img/contactArrow.png" id="contactArrow" />
+            <a href="javascript:"><img src="img/contactArrow.png" id="contactArrow" /></a>
+            <img src="img/logo.png" class="logo" />
         </section>
         <!-- contact page end -->
     </div>
 
+    <script src="js/jquery.js"></script>
+    <script src="js/onepage-scroll.min.js"></script>
+    <script src="js/sea.js"></script>
     <script>
-        $(document).ready(function(){
-            $(".main").onepage_scroll({
-                sectionContainer: "section",
-                animationTime: 600,
-                updateURL: true,
-                responsiveFallback: 600,
-                loop: true,
-                //direction: "horizontal"
-            });
+        seajs.config({
+            base: "./js/",
+            alias: {
+              "jquery": "jquery.min.js",
+              // "scrollSrc": "onepage-scroll.min.js"
+            }
         });
 
+        seajs.use('init', function(fn) {
+            $(".main").onepage_scroll(fn.conf);
+        });
+
+        seajs.use('works');
+        seajs.use('contact');
     </script>
 </body>
 </html>
