--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,191 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <meta name="keywords" content="地平线工作室" />
+    <meta name="description" content="地平线工作室" />
 	<link type="text/css" rel="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/home.css">
+    <link type="text/css" rel="stylesheet" href="css/aboutus.css">
 	<link type="text/css" rel="stylesheet" href="css/contact.css">
     <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.onepage-scroll.min.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/aboutus.js"></script>
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	<title>Hello</title>
+	<title>地平线工作室</title>
 </head>
 <body>
     <div class="main">
         <section class="page1">
-            <h1>hello</h1>
+            <div class="homeCont">
+                <div class="homeNav">
+                    <img src="img/homeTitleBg.png" class="homeTitleBg">
+                    <a href="#2" class="homeAboutus">
+                        <img src="img/homeAboutus.png">
+                    </a>
+                    <a href="#3" class="homeOurwork">
+                        <img src="img/homeOurwork.png">
+                    </a>
+                    <a href="#4" class="homeContact">
+                        <img src="img/homeContact.png">
+                    </a>
+                </div>
+                <img src="img/homeLogo.png" class="homeLogo">
+            </div>
+            <div class="homeFooter">
+                <img src="img/homeFoBg.png">
+            </div>
         </section>
+
         <section class="page2">
-            <h1>hello</h1>
+            <img src="img/aboutusSro.png" class="aboutusSro">
+            <div class="aboutCont">
+                <img src="img/aboutusLogo.png" class="aboutLogo">
+                <div class="aboutTop">
+                    <p class="aboutHistory">History:</p>
+                    <p class="aboutHisInt">地平线工作室的历史和简介</p>
+                    <img src="img/stuPho.png" class="aboutstuPho">
+                </div>
+                <div class="aboutbottom">
+                    <p class="aboutHistory">The family:</p>
+                    <div class="aboutWra">
+                        <ul style="width:908px;float:left;">
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
+                        </ul>
+
+                        <ul style="width:908px;float:left;">
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
+                            <a href="javascript:void(0);" class="aboutBack">&lt;&lt;</a>
+                        </ul>
+
+                        <ul style="width:908px;float:left;">
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                </div>
+                            </li>
+
+                            <a href="javascript:void(0);" class="aboutBack aboutBack2">&lt;&lt;</a>
+                        </ul>
+                    </div>
+                </div>
+                <img src="img/aboutusAngle.png" class="aboutusAngle">
+            </div>
         </section>
         <section id="contactPage">
             <img src="img/contactLogo.png" id="contactLogo" />
@@ -28,6 +198,9 @@
            		</div>
             </div>
             <img src="img/contactArrow.png" id="contactArrow" />
+        </section>
+        <section class="page2">
+            <h1>hello</h1>
         </section>
     </div>
 
