--- a/app/index.html
+++ b/app/index.html
@@ -5,26 +5,21 @@
     <meta name="keywords" content="地平线工作室" />
     <meta name="description" content="地平线工作室" />
 	<link type="text/css" rel="stylesheet" href="css/style.css">
-<<<<<<< HEAD
+
     <link type="text/css" rel="stylesheet" href="css/home.css">
     <link type="text/css" rel="stylesheet" href="css/aboutus.css">
 	<link type="text/css" rel="stylesheet" href="css/contact.css">
     <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.onepage-scroll.min.js"></script>
     <script src="js/home.js"></script>
     <script src="js/aboutus.js"></script>
-=======
     <link type="text/css" rel="stylesheet" href="css/works.css">
 	<link type="text/css" rel="stylesheet" href="css/contact.css">
     <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
->>>>>>> e14127ca3acfb0469518745956f44f6e067409d9
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<title>地平线工作室</title>
 </head>
 <body>
     <div class="main">
-<<<<<<< HEAD
         <section class="page1">
             <div class="homeCont">
                 <div class="homeNav">
@@ -194,15 +189,13 @@
                 </div>
                 <img src="img/aboutusAngle.png" class="aboutusAngle">
             </div>
-=======
-        <section class="page page1">
+        <!-- <section class="page page1">
             <h1>hello</h1>
             <img src="img/logo.png" class="logo" />
         </section>
         <section class="page page2">
             <h1>hello</h1>
-            <img src="img/logo.png" class="logo" />
->>>>>>> e14127ca3acfb0469518745956f44f6e067409d9
+            <img src="img/logo.png" class="logo" /> -->
         </section>
 
         <!-- works page start -->
@@ -261,13 +254,7 @@
             <a href="javascript:"><img src="img/contactArrow.png" id="contactArrow" /></a>
             <img src="img/logo.png" class="logo" />
         </section>
-<<<<<<< HEAD
-        <section class="page2">
-            <h1>hello</h1>
-        </section>
-=======
         <!-- contact page end -->
->>>>>>> e14127ca3acfb0469518745956f44f6e067409d9
     </div>
 
     <script src="js/jquery.js"></script>
