--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,8 @@
         <!-- works page start -->
         <section class="page worksPage">
             <img src="img/worksLogo.png" id="worksLogo" />
-            <div class="worksMain">
+            <img src="img/worksSideArrow.png" class="worksSideArrow">
+            <div class="worksMain"> 
                 <div class="worksItem">
                     <img src="img/worksExample.jpg">
                     <h3>作品名称</h3>
@@ -244,6 +245,7 @@
         <!-- contact page start -->
         <section class="page contactPage">
             <img src="img/contactLogo.png" id="contactLogo" />
+            <img src="img/contactSideArrow.png" class="cotactSideArrow">
             <div class="contactInfo">
             	<div class="contactInfoList">
 	           		<p>Tel: 12331231312</p>
