--- a/app/index.html
+++ b/app/index.html
@@ -186,15 +186,9 @@
                     </div>
                 </div>
                 <img src="img/aboutusAngle.png" class="aboutusAngle">
+                <img src="img/logo.png" class="logo" />
             </div>
-        <!-- <section class="page page1">
-            <h1>hello</h1>
-            <img src="img/logo.png" class="logo" />
-        </section>
-        <section class="page page2">
-            <h1>hello</h1>
-            <img src="img/logo.png" class="logo" /> -->
-        </section>
+            </section>
 
         <!-- works page start -->
         <section class="page worksPage">
@@ -245,10 +239,11 @@
             <img src="img/contactLogo.png" id="contactLogo" />
             <img src="img/contactSideArrow.png" class="cotactSideArrow">
             <div class="contactInfo">
+                <img src="img/contactPanel.png" class="contactPanel">
             	<div class="contactInfoList">
-	           		<p>Tel: 12331231312</p>
-	           		<p>Email: abc@def.com</p>
-	           		<p>Addr: 光电楼333</p>
+	           		<p><span>Tel</span>: 12331231312</p>
+	           		<p><span>Email</span>: abc@def.com</p>
+	           		<p><span>Addr</span>: 光电楼333</p>
            		</div>
             </div>
             <a href="javascript:"><img src="img/contactArrow.png" id="contactArrow" /></a>
