--- a/app/index.html
+++ b/app/index.html
@@ -185,7 +185,7 @@
                         </ul>
                     </div>
                 </div>
-                <img src="img/aboutusAngle.png" class="aboutusAngle">
+                <!-- <img src="img/aboutusAngle.png" class="aboutusAngle"> -->
                 <img src="img/logo.png" class="logo" />
             </div>
             </section>
