--- a/app/index.html
+++ b/app/index.html
@@ -195,6 +195,17 @@
             <img src="img/worksLogo.png" id="worksLogo" />
             <img src="img/worksSideArrow.png" class="worksSideArrow">
             <div class="worksMain"> 
+                <!-- 弹出层，显示项目具体信息 -->
+                <div class="worksInfoLayer">
+                    <img src="img/worksClose.png" class="worksCloseLayer">
+                    <div class="worksLayerContent">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <p>hello world hello worldhello worldhello worldhello worldhello worldhello worldhello world
+                        hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
+                        hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world</p>
+                    </div>
+                </div>
                 <div class="worksItem">
                     <img src="img/worksExample.jpg">
                     <h3>作品名称</h3>
@@ -225,9 +236,7 @@
                     <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
                 </div>
                 <!-- works item end  -->
-                <div class="worksItem worksMore worksItemRight">
-                    <p>more<span>>></span></p>
-                </div>
+                <a href="javascript:void(0);" class="worksMore">more&gt;&gt;</a>
             </div>
             <!-- works main end -->
             <img src="img/logo.png" class="logo" />
@@ -237,7 +246,7 @@
         <!-- contact page start -->
         <section class="page contactPage">
             <img src="img/contactLogo.png" id="contactLogo" />
-            <img src="img/contactSideArrow.png" class="cotactSideArrow">
+            <img src="img/contactSideArrow.png" class="contactSideArrow">
             <div class="contactInfo">
                 <img src="img/contactPanel.png" class="contactPanel">
             	<div class="contactInfoList">
