--- a/app/index.html
+++ b/app/index.html
@@ -206,37 +206,44 @@
                         hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world</p>
                     </div>
                 </div>
-                <div class="worksItem">
-                    <img src="img/worksExample.jpg">
-                    <h3>作品名称</h3>
-                    <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                <div class="worksItemList">
+                    <div class="worksItem">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                    </div>
+                    <!-- works item end -->
+                    <div class="worksItem">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                    </div>
+                    <!-- works item end -->
+                    <div class="worksItem worksItemRight">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                    </div>
+                    <!-- works item end  -->
+                    <div class="worksItem">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                    </div>
+                    <!-- works item end  -->
+                    <div class="worksItem">
+                        <img src="img/worksExample.jpg">
+                        <h3>作品名称</h3>
+                        <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
+                    </div>
+                    <!-- works item end  -->
+                    <input type='hidden' val=5 id='worksLastId' />
+                </div> <!-- worksItemList end -->
+                <div class="worksNav">
+                    <a href="javascript:void(0);" class="worksMore">more&gt;&gt;</a>
+                    <a href="javascript:void(0);" class="worksMoreLeft">&lt;</a>&nbsp;&nbsp;
+                    <a href="javascript:void(0);" class="worksMoreRight">&gt;</a>
                 </div>
-                <!-- works item end -->
-                <div class="worksItem">
-                    <img src="img/worksExample.jpg">
-                    <h3>作品名称</h3>
-                    <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
-                </div>
-                <!-- works item end -->
-                <div class="worksItem worksItemRight">
-                    <img src="img/worksExample.jpg">
-                    <h3>作品名称</h3>
-                    <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
-                </div>
-                <!-- works item end  -->
-                <div class="worksItem">
-                    <img src="img/worksExample.jpg">
-                    <h3>作品名称</h3>
-                    <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
-                </div>
-                <!-- works item end  -->
-                <div class="worksItem">
-                    <img src="img/worksExample.jpg">
-                    <h3>作品名称</h3>
-                    <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
-                </div>
-                <!-- works item end  -->
-                <a href="javascript:void(0);" class="worksMore">more&gt;&gt;</a>
             </div>
             <!-- works main end -->
             <img src="img/logo.png" class="logo" />
