--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,12 @@
                                 <a href="javascript:void(0);" class="aboutHeada">
                                     <img src="img/aboutHead2.png" class="aboutHeadPho">
                                 </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire"></p>
+                                    <p class="aboutCompany"></p>
                                 </div>
                             </li>
 
@@ -63,7 +68,12 @@
                                 <a href="javascript:void(0);" class="aboutHeada">
                                     <img src="img/aboutHead2.png" class="aboutHeadPho">
                                 </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire"></p>
+                                    <p class="aboutCompany"></p>
                                 </div>
                             </li>
 
@@ -71,7 +81,12 @@
                                 <a href="javascript:void(0);" class="aboutHeada">
                                     <img src="img/aboutHead2.png" class="aboutHeadPho">
                                 </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire"></p>
+                                    <p class="aboutCompany"></p>
                                 </div>
                             </li>
 
@@ -79,7 +94,12 @@
                                 <a href="javascript:void(0);" class="aboutHeada">
                                     <img src="img/aboutHead2.png" class="aboutHeadPho">
                                 </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire"></p>
+                                    <p class="aboutCompany"></p>
                                 </div>
                             </li>
 
@@ -87,100 +107,21 @@
                                 <a href="javascript:void(0);" class="aboutHeada">
                                     <img src="img/aboutHead2.png" class="aboutHeadPho">
                                 </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire"></p>
+                                    <p class="aboutCompany"></p>
                                 </div>
                             </li>
 
-                            <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
-                        </ul>
-
-                        <ul style="width:936px;float:left;">
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
-                            <a href="javascript:void(0);" class="aboutBack">&lt;&lt;</a>
-                        </ul>
-
-                        <ul style="width:936px;float:left;">
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">GHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTYPASGHJKLZCVBNGHJKLQWERTY
-                                </div>
-                            </li>
-
-                            <a href="javascript:void(0);" class="aboutBack aboutBack2">&lt;&lt;</a>
+                            <div class="aboutMoreOption">
+                                <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
+                                <a href="javascript:void(0);" class="aboutBack" onclick="window.history.go(0)">&lt;&lt;</a>
+                            </div>
+                            <input type="hidden" value="5" id="aboutLastId" />
+                            <input type="hidden" value="5" id="aboutpreId" />
                         </ul>
                     </div>
                 </div>
@@ -235,7 +176,7 @@
                         <!-- <p>hello world;hello worldhello worldhello worldhello worldhello worldhello worldhello world</p> -->
                     </div>
                     <!-- works item end  -->
-                    <input type='hidden' val=5 id='worksLastId' />
+                    <input type='hidden' val='5' id='worksLastId' />
                 </div> <!-- worksItemList end -->
                 <div class="worksNav">
                     <a href="javascript:void(0);" class="worksMore">more&gt;&gt;</a>
